--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,9 +13,10 @@
   
     <div  class="col-sm-2">
       <select #employeelist (change)="onChangeEmployeeName(employeelist.value)"
-      class="selectpicker" data-size="5" title="Employee Name" [(ngModel)]="user.emp_name" class="form-control selectpicker"  data-live-search="true">
+      class="selectpicker" data-size="5" title="Employee Name" [(ngModel)]="user.emp_name" class="form-control selectpicker"  data-live-search="true"
+      [disabled]="employeelist.value!=''">
       <option  data-hidden="true"></option>
-      <option *ngFor="let name of emp_name" [value]="name.emp_name">{{name.emp_name}}</option>
+      <option *ngFor="let name of emp_name" [value]="name.emp_name" >{{name.emp_name}}</option>
     </select>
     </div>
   
@@ -39,7 +40,7 @@
   <div *ngIf="tabledisplay" class="container">
   <table  mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="excel-table">
   
-    <ng-container matColumnDef="select">
+    <!-- <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? toggleAllRows() : null"
                       [checked]="selection.hasValue() && isAllSelected()"
@@ -56,7 +57,7 @@
                      >
         </mat-checkbox>
       </td>
-    </ng-container>
+    </ng-container> -->
   
     <ng-container matColumnDef="week_no">
       <th mat-header-cell *matHeaderCellDef>Week</th>
@@ -107,7 +108,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator [length]="dataSource.data.length" [pageIndex]="0" [pageSize]="10"
+  <mat-paginator length="dataSource.data.length" [pageIndex]="0" [pageSize]="10"
   [pageSizeOptions]="[5, 10, 20]" aria-label="Select page">
   </mat-paginator>
   </div>
